--- a/site/_static/leftfield.scss
+++ b/site/_static/leftfield.scss
@@ -9,6 +9,11 @@
 }
 .navbar-nav {
     font-size: 1.5rem;
+//     margin: 1rem 1rem;
+    margin-right: 1rem;
+}
+.bd-footer {
+    font-size: 0.8rem;
 }
 
 html {
