center heading and other content updates

--- a/site/_static/leftfield.scss
+++ b/site/_static/leftfield.scss
@@ -15,6 +15,10 @@
 .bd-footer {
     font-size: 0.8rem;
 }
+.center h1,
+.center h2 {
+    text-align: center;
+}
 
 html {
   // Header height will impact the top offset for many sections
