--- a/site/_static/leftfield.css
+++ b/site/_static/leftfield.css
@@ -3,6 +3,14 @@
     margin-right: 1rem;   /* space between right-aligned section links and icon links / components */
     margin-left: 0rem;    /* space between logo and left-aligned section links, also between light/dark button & icon links  */
     padding: 0rem;
+    /*gap: 0.5rem;*/        /* spacing between section titles */
+}
+
+.navbar-brand img {
+   height: 4.6rem;  /* adapted from numpy docs - limits logo height for older safari and ie browsers */
+}
+.navbar-brand {
+   height: 4.6rem;
 }
 
 .bd-footer {
