--- a/site/_static/leftfield.css
+++ b/site/_static/leftfield.css
@@ -13,6 +13,12 @@
 .bd-footer {
     font-size: 0.8rem;    /* footer font size */
 }
+
+body {
+    /* adapted from numpy docs for older safari and ie browsers */
+    font-family: "Segoe UI", sans-serif, arial;
+}
+
 /* center h1 and h2 headings */
 .center h1,
 .center h2 {
@@ -27,7 +33,8 @@ html {
     --pst-header-article-height: 3rem;  /* space between nav bar and start of article */
 
     /* prefer Segoe UI which is a windows system font and used for Leftfield logo */
-    --pst-font-family-base: Segoe UI, var(--pst-font-family-base-system);
+    /*--pst-font-family-base: "Segoe UI", var(--pst-font-family-base-system);*/
+    --pst-font-family-base: "Segoe UI", sans-serif, var(--pst-font-family-base-system);
     --pst-font-size-base: 0.9rem;
 }
 
