remove "skip to main content" link

--- a/site/_static/leftfield.css
+++ b/site/_static/leftfield.css
@@ -10,6 +10,10 @@
    height: 4.6rem;  /* adapted from numpy docs - limits logo height for older safari and ie browsers */
 }
 
+.skip-link {
+    display: none;      /* remove skip to main content link */
+}
+
 .bd-footer {
     font-size: 0.8rem;    /* footer font size */
 }
