--- a/site/_static/leftfield.css
+++ b/site/_static/leftfield.css
@@ -27,8 +27,10 @@
     display: -webkit-flex;
     -webkit-flex-direction: row;
 }*/
+/* for ie which ignores the flex gap */
+/* TODO: make this specific to nav bar */
 .nav-link {
-    margin-left: 0.3rem;    /* for ie which ignores the flex gap */
+    margin-left: 0.3rem;    
 }
 
 .skip-link {
@@ -49,10 +51,17 @@ body {
     text-align: center;
 }
 
-.bd-breadcrumbs {
+/* workaround for older safari browsers where flex stacks items vertically */
+ul.bd-breadcrumbs li.breadcrumb-item,
+ul.bd-breadcrumbs li.breadcrumb-item a {
+    display: inline-block;
     display: flex;
-    display: none;      /* turn off breadcrumbs for browsers that don't support display flex */
 }
+
+ul.bd-breadcrumbs li.breadcrumb-item:not(.breadcrumb-home):before {
+    content: "⏵";       /* workaround for older ie and safari browsers which don't read --pst-breadcrumb-divider */
+}
+
 
 html {
     /* Header height will impact the top offset for many sections
@@ -62,8 +71,7 @@ html {
     --pst-header-article-height: 3rem;  /* space between nav bar and start of article */
 
     /* prefer Segoe UI which is a windows system font and used for Leftfield logo */
-    /*--pst-font-family-base: "Segoe UI", var(--pst-font-family-base-system);*/
-    --pst-font-family-base: "Segoe UI", sans-serif, var(--pst-font-family-base-system);
+    --pst-font-family-base: "Segoe UI", var(--pst-font-family-base-system);
     --pst-font-size-base: 0.9rem;
 }
 
