--- a/site/_static/leftfield.css
+++ b/site/_static/leftfield.css
@@ -11,7 +11,7 @@
 }
 
 /* limit logo height for older safari and ie browsers - adapted from numpy docs  */
-navbar-brand img {
+.navbar-brand img {
     height: 4.6rem;
 }
 
