updates for webp announcement w/o insertAdjacentElement

--- a/site/_static/leftfield.css
+++ b/site/_static/leftfield.css
@@ -161,6 +161,10 @@ html[data-theme="dark"] .bd-sidebar {
     background-color: #459db9;
 }
 
+/* Workarounds for bowsers without @media support. */
+.bd-header-announcement {
+    padding: .5rem 2%;
+}
 
 /* Workarounds for browsers without `display: flex` support */
 /* stack breadcrumbs horizontally */
